fixed broken css links. added ReportDetails Action

--- a/Testflight.Web/Content/Configuration/ConfigurationBuildReport.css
+++ b/Testflight.Web/Content/Configuration/ConfigurationBuildReport.css
@@ -7,9 +7,5 @@
 #sidebar {
     width: 300px;
     float: left;
-}
-
-#content {
-    width: auto;
-    float: right;
+    margin-top: 15px;
 }
